--- a/game/index.htm
+++ b/game/index.htm
@@ -5,7 +5,7 @@ Spiel:
  #if($gameEditKey)
 
 	Link zur Edit:<br/>
-	<a href="http://localhost:8080/age/game/edit.htm?editKey=$gameEditKey">http://localhost:8080/webapps/game/edit.htm?editKey=$gameEditKey</a>
+	<a href="./edit.htm?editKey=$gameEditKey">./edit.htm?editKey=$gameEditKey</a>
  #end
 
  <a href="./play.htm?new=$game.key" class="newGame"> neue instance</a>
