--- a/home.htm
+++ b/home.htm
@@ -9,15 +9,21 @@ spiele:
  #if($game.table.style.bgImageName)
        #set($src = "/age/images/game/"+$game.key+"/0_"+$game.table.style.bgImageName )
  #else
- 	#set($src = "" )
+  #set($src = "")
  #end
-    <li style="background-color:$game.table.style.bgColor">
+    <li>
     <a href="./game/?key=$game.key">
     <p>$game.name</p>
-    <img width="70" src="$src"/>
+    #if($src!="")
+    	<img width="70" src="$src" style="background-color:$game.table.style.bgColor"/>
+    #else
+    	<img width="70" src="/age/images/image-bg.png"/>
+    #end
+    
     </a>
     
     </li>
+    #set($src = "")
 #end
 
 
