* bugs fixed, versteckte Spielbereich

--- a/game/play.htm
+++ b/game/play.htm
@@ -1,5 +1,5 @@
  #if($playGame)
-$gameJSON
+ <h1>$playGame.name</h1>
 <div id="ageGameContener">
 <div id="ageConnectionStatus"><img src="/age/images/connect_idle.gif"/></div>
 <div style="text-align:right;"><a href="javascript:GameManager.leaveGame();" id="leaveGameButton">Verlasse das Spiel</a></div>
